--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,8 @@ script:
 #  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
 #  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
 #  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
+  - touch /app/.composer/cache/test.f
   - docker-compose up -d
-  - docker-compose run build bash -c "ls -la /app/.composer/cache"
+  - docker-compose run build bash -c "chown -R www:www /app && ls -la /app/.composer/cache"
 
 after_failure: docker ps -s
