--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ script:
 #  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
   - touch /app/.composer/cache/test.f
   - docker-compose up -d
+  - docker-compose run build bash -c "composer require composer/composer:^1.4"
   - docker-compose run build bash -c "chown -R www:www /app && ls -la /app/.composer/cache"
 
 after_failure: docker ps -s
