MAGECLOUD-4292: FT Take Longer than Before Because of composer/cache Directory has Read-only Permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - 'magento-build-etc:/app/app/etc:delegated'
       - 'magento-build-static:/app/pub/static:delegated'
       - 'magento-build-media:/app/pub/media:delegated'
-      - '~/.composer/cache:/app/.composer/cache:delegated'
+      - '~/.composer:/app/.composer:delegated'
     networks:
       magento:
         aliases:
@@ -69,7 +69,7 @@ services:
       - 'magento-etc:/app/app/etc:delegated'
       - 'magento-static:/app/pub/static:delegated'
       - 'magento-media:/app/pub/media:delegated'
-      - '~/.composer/cache:/app/.composer/cache:delegated'
+      - '~/.composer:/app/.composer:delegated'
     networks:
       magento:
         aliases:
