--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,8 @@ script:
   - touch ~/.composer/cache/test.f
   - docker-compose up -d
   - docker-compose run build bash -c "composer require composer/composer:^1.4"
+  - docker-compose run build bash -c "ls -la /app"
+  - docker-compose run build bash -c "ls -la /app/.composer"
   - docker-compose run build bash -c "chown -R www:www /app && ls -la /app/.composer/cache"
 
 after_failure: docker ps -s
