--- a/.travis.yml
+++ b/.travis.yml
@@ -66,10 +66,9 @@ script:
 #  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
 #  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
   - touch ~/.composer/cache/test.f
-  - docker-compose up -d
+  - docker-compose up -d --build
   - docker-compose run build bash -c "composer require composer/composer:^1.4"
   - docker-compose run build bash -c "ls -la /app"
   - docker-compose run build bash -c "ls -la /app/.composer"
-  - docker-compose run build bash -c "chown -R www:www /app/.composer && ls -la /app/.composer/cache"
 
 after_failure: docker ps -s
