--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ script:
   - docker build -t test/php:7.2-cli https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292:images/php/7.2-cli
   - docker build -t test/php:7.2-fpm https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292:images/php/7.2-fpm
   - docker build -t test/nginx:1.9 https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292:images/nginx/1.9
-  - docker-compose up -d --force-recreate
+  - docker-compose up -d
   - docker-compose run build bash -c "composer require composer/composer:^1.4"
   - docker-compose run build bash -c "ls -la /app"
   - docker-compose run build bash -c "ls -la /app/.composer"
