--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,16 +120,10 @@ services:
   generic:
     image: alpine
     environment:
-      - MAGENTO_RUN_MODE=production
-      - PHP_MEMORY_LIMIT=2048M
-      - DEBUG=false
-      - ENABLE_SENDMAIL=false
-      - UPLOAD_MAX_FILESIZE=64M
-      - MAGENTO_ROOT=/app
-      - UPDATE_UID_GID=true
       - 'PHP_EXTENSIONS=bcmath bz2 calendar exif gd gettext intl mysqli pcntl pdo_mysql soap sockets sysvmsg sysvsem sysvshm opcache zip xsl redis'
     env_file:
       - ./.docker/composer.env
+      - ./.docker/global.env
 volumes:
   magento: {  }
   magento-vendor: {  }
