MAGECLOUD-4292: FT Take Longer than Before Because of composer/cache Directory has Read-only Permissions

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: bionic
+dist: xenial
 
 addons:
   hosts:
@@ -9,10 +9,6 @@ git:
 
 services:
   - docker
-
-cache:
-  directories:
-    - $HOME/.composer/cache/files
 
 language: php
 php:
