MAGECLOUD-4292: FT Take Longer than Before Because of composer/cache Directory has Read-only Permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       - 'magento-etc:/app/app/etc:delegated'
       - 'magento-static:/app/pub/static:delegated'
       - 'magento-media:/app/pub/media:delegated'
+      - '~/.composer:/app/.composer:delegated'
     networks:
       - magento
   build:
