--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,6 @@ services:
       - 'magento-etc:/app/app/etc:delegated'
       - 'magento-static:/app/pub/static:delegated'
       - 'magento-media:/app/pub/media:delegated'
-      - '~/.composer:/app/.composer:delegated'
     networks:
       - magento
   build:
@@ -56,7 +55,7 @@ services:
       - 'magento-build-etc:/app/app/etc:delegated'
       - 'magento-build-static:/app/pub/static:delegated'
       - 'magento-build-media:/app/pub/media:delegated'
-      - '~/.composer:/app/.composer:delegated'
+      - '/app/.composer:delegated'
     networks:
       magento:
         aliases:
@@ -77,7 +76,7 @@ services:
       - 'magento-etc:/app/app/etc:delegated'
       - 'magento-static:/app/pub/static:delegated'
       - 'magento-media:/app/pub/media:delegated'
-      - '~/.composer:/app/.composer:delegated'
+      - '/app/.composer:delegated'
     networks:
       magento:
         aliases:
