--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,12 @@
     "graylog2/gelf-php": "^1.4.2",
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.6",
-    "illuminate/container": "^5.6",
-    "illuminate/contracts": "^5.6",
     "magento/magento-cloud-components": "^1.0.1",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.3||^4.0",
+    "symfony/dependency-injection": "^3.4||^4.3",
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^4.2",
     "symfony/yaml": "^4.0"
