--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/console": "^2.3||^4.0",
+    "symfony/config": "^3.4||^4.3",
     "symfony/dependency-injection": "^3.4||^4.3",
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^4.2",
