--- a/.travis.yml
+++ b/.travis.yml
@@ -13,34 +13,34 @@ services:
 language: php
 php:
   - '7.1'
-#  - '7.2'
-#  - '7.3'
+  - '7.2'
+  - '7.3'
 
 env:
   matrix:
     - TEST_SUITE=static-unit XDEBUG=true
-#    - TEST_SUITE=integration
-#    - TEST_SUITE=functional
-#    - TEST_SUITE=functional FUNCTIONAL_INDEX=1
-#    - TEST_SUITE=functional FUNCTIONAL_INDEX=2
-#    - TEST_SUITE=functional FUNCTIONAL_INDEX=3
+    - TEST_SUITE=integration
+    - TEST_SUITE=functional
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=1
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=2
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=3
 
-#matrix:
-#  exclude:
-#    - php: '7.1'
-#      env: TEST_SUITE=integration
-#    - php: '7.1'
-#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
-#    - php: '7.1'
-#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
-#    - php: '7.1'
-#      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
-#
-#    - php: '7.2'
-#      env: TEST_SUITE=functional
-#
-#    - php: '7.3'
-#      env: TEST_SUITE=functional
+matrix:
+  exclude:
+    - php: '7.1'
+      env: TEST_SUITE=integration
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=1
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+
+    - php: '7.2'
+      env: TEST_SUITE=functional
+
+    - php: '7.3'
+      env: TEST_SUITE=functional
 
 install:
   - id
@@ -59,15 +59,8 @@ before_script:
   - ./tests/travis/prepare_functional_parallel.sh
 
 script:
-  - docker build -t test/php:7.2-cli https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292-1:images/php/7.2-cli
-  - docker build -t test/php:7.2-fpm https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292-1:images/php/7.2-fpm
-  - docker build -t test/nginx:1.9 https://github.com/magento/magento-cloud-docker.git#MAGECLOUD-4292-1:images/nginx/1.9
-  - docker-compose up -d
-  - docker-compose run build bash -c "ls -la /app"
-  - docker-compose run build bash -c "id"
-  - docker-compose down -v
-#  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
-#  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
-#  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
+  - if [ $TEST_SUITE == "static-unit" ]; then ./tests/travis/static-unit.sh; fi
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "integration" ]; then ./tests/travis/integration.sh; fi;
+  - if [ $TRAVIS_SECURE_ENV_VARS == "true" ] && [ $TEST_SUITE == "functional" ]; then ./tests/travis/functional.sh; fi;
 
 after_failure: docker ps -s
