MAGECLOUD-4292: FT Take Longer than Before Because of composer/cache Directory has Read-only Permissions

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,15 @@ git:
 services:
   - docker
 
+cache:
+  directories:
+    - $HOME/.composer/cache/files
+
 language: php
 php:
-  - '7.1'
+#  - '7.1'
   - '7.2'
-  - '7.3'
+#  - '7.3'
 
 env:
   matrix:
