MAGECLOUD-4292: FT Take Longer than Before Because of composer/cache Directory has Read-only Permissions

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,6 @@
     "repo.magento.com": {
       "type": "composer",
       "url": "https://repo.magento.com/"
-    },
-    "mccd": {
-      "type": "git",
-      "url": "git@github.com:magento/magento-cloud-docker.git"
     }
   },
   "require": {
@@ -26,8 +22,7 @@
     "illuminate/config": "^5.6",
     "illuminate/container": "^5.6",
     "illuminate/contracts": "^5.6",
-    "magento/magento-cloud-components": "^1.0",
-    "magento/magento-cloud-docker": "dev-MAGECLOUD-4292-2",
+    "magento/magento-cloud-components": "^1.0.1",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
@@ -37,6 +32,7 @@
     "symfony/yaml": "^4.0"
   },
   "suggest": {
+    "magento/magento-cloud-docker": "^1.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.5.3",
