--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,7 @@
     "magento/magento-cloud-configuration": "*"
   },
   "bin": [
-    "bin/ece-tools",
-    "m2-ece-build",
-    "m2-ece-deploy",
-    "m2-ece-scd-dump"
+    "bin/ece-tools"
   ],
   "autoload": {
     "psr-4": {
