--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "symfony/console": "^2.3||^4.0",
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^4.2",
-    "symfony/yaml": "^4.0"
+    "symfony/yaml": "^3.3||^4.0"
   },
   "suggest": {
     "magento/magento-cloud-docker": "^1.0"
