--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,15 @@
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
     "twig/twig": "^1.0||^2.0",
-    "magento/magento-cloud-components": "^1.0.1"
+    "magento/magento-cloud-components": "^1.0.1",
+    "magento/magento-cloud-patches": "^1.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
     "phpmd/phpmd": "@stable",
     "phpunit/php-code-coverage": "^5.2",
     "phpunit/phpunit": "^6.2",
-    "squizlabs/php_codesniffer": "^3.0",
+    "squizlabs/php_codesniffer": "^3.0 <3.5",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
     "phpstan/phpstan": "@stable"
