MAGECLOUD-4458: De-compose All Patches from ECE-Tools

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     "repo.magento.com": {
       "type": "composer",
       "url": "https://repo.magento.com/"
+    },
+    "mcp": {
+      "type": "vcs",
+      "url": "git@github.com:magento/magento-cloud-patches.git"
     }
   },
   "require": {
