--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "symfony/yaml": "^3.3||^4.0",
     "twig/twig": "^1.0||^2.0",
     "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-patches": "^1.0.0"
+    "magento/magento-cloud-patches": "dev-MAGECLOUD-4458"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
