--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ install:
 before_script:
   - echo "COMPOSER_MAGENTO_USERNAME=${REPO_USERNAME}" >> ./.docker/composer.env
   - echo "COMPOSER_MAGENTO_PASSWORD=${REPO_PASSWORD}" >> ./.docker/composer.env
-  - echo "COMPOSER_GITHUB_TOKEN=${GITHUB_TOKEN}}" >> ./.docker/composer.env
+  - echo "COMPOSER_GITHUB_TOKEN=${GITHUB_TOKEN}" >> ./.docker/composer.env
   - if [ $XDEBUG == "true" ]; then echo "PHP_ENABLE_XDEBUG=true" >> ./.docker/global.env; fi;
   - sudo /etc/init.d/mysql stop
   - ./tests/travis/prepare_functional_parallel.sh
