--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "phpmd/phpmd": "@stable",
     "phpunit/php-code-coverage": "^5.2",
     "phpunit/phpunit": "^6.2",
-    "squizlabs/php_codesniffer": "^3.0 <3.5",
+    "squizlabs/php_codesniffer": "^3.0",
     "codeception/codeception": "^2.5.3",
     "consolidation/robo": "^1.2",
     "phpstan/phpstan": "@stable"
