--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
     "graylog2/gelf-php": "^1.4.2",
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.6",
+    "magento/magento-cloud-components": "^1.0.1",
+    "magento/magento-cloud-docker": "^1.0.0",
+    "magento/magento-cloud-patches": "^1.0.0",
     "monolog/monolog": "^1.16",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
@@ -28,10 +31,7 @@
     "symfony/dependency-injection": "^3.4||^4.3",
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^3.3",
-    "symfony/yaml": "^3.3||^4.0",
-    "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-docker": "^1.0.0",
-    "magento/magento-cloud-patches": "^1.0.0"
+    "symfony/yaml": "^3.3||^4.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.5.3",
