--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
     - TEST_SUITE=functional FUNCTIONAL_INDEX=1
     - TEST_SUITE=functional FUNCTIONAL_INDEX=2
     - TEST_SUITE=functional FUNCTIONAL_INDEX=3
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=4
 
 matrix:
   exclude:
@@ -35,6 +36,8 @@ matrix:
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=2
     - php: '7.1'
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=4
 
     - php: '7.2'
       env: TEST_SUITE=functional
