--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
     - TEST_SUITE=functional FUNCTIONAL_INDEX=2
     - TEST_SUITE=functional FUNCTIONAL_INDEX=3
     - TEST_SUITE=functional FUNCTIONAL_INDEX=4
+    - TEST_SUITE=functional FUNCTIONAL_INDEX=5
 
 matrix:
   exclude:
@@ -38,6 +39,8 @@ matrix:
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=3
     - php: '7.1'
       env: TEST_SUITE=functional FUNCTIONAL_INDEX=4
+    - php: '7.1'
+      env: TEST_SUITE=functional FUNCTIONAL_INDEX=5
 
     - php: '7.2'
       env: TEST_SUITE=functional
