--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,11 @@
     "illuminate/config": "^5.6",
     "magento/magento-cloud-components": "^1.0.1",
     "monolog/monolog": "^1.16",
+    "nesbot/carbon": "^2.25",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
-    "symfony/console": "^2.3||^4.0",
     "symfony/config": "^3.4||^4.3",
+    "symfony/console": "^2.3||^4.0",
     "symfony/dependency-injection": "^3.4||^4.3",
     "symfony/process": "^2.1||^4.1",
     "symfony/serializer": "^3.3",
