--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "magento/ece-tools",
   "description": "Provides tools to build and deploy Magento 2 Enterprise Edition",
   "type": "magento2-component",
-  "version": "2002.0.21",
+  "version": "2002.0.22",
   "license": "OSL-3.0",
   "repositories": {
     "repo.magento.com": {
@@ -29,8 +29,8 @@
     "symfony/process": "~2.1||~4.1.0",
     "symfony/yaml": "^3.3||^4.0",
     "twig/twig": "^1.0||^2.0",
-    "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-patches": "^1.0.0"
+    "magento/magento-cloud-components": "~1.0.1",
+    "magento/magento-cloud-patches": "~1.0.0"
   },
   "require-dev": {
     "php-mock/php-mock-phpunit": "^2.0",
