--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "phpstan/phpstan": "^0.11",
     "phpunit/php-code-coverage": "^6.0",
     "phpunit/phpunit": "^7.2",
-    "squizlabs/php_codesniffer": "^3.0"
+    "squizlabs/php_codesniffer": "^3.0",
+    "funkjedi/composer-include-files": "^1.0"
   },
   "conflict": {
     "nesbot/carbon": ">=1.38 <2.0"
@@ -94,6 +95,9 @@
         "dist/.magento.env.yaml",
         ".magento.env.yaml.dist"
       ]
+    ],
+    "include_files": [
+      "vendor/codeception/phpunit-wrapper/src/phpunit7-interfaces.php"
     ]
   }
 }
